# DX100

./: .clang-format  .gitignore  LICENSE  README.md
benchmarks/: .gitignore  build.sh
benchmarks/API/: .gitignore  MAA.hpp  MAA_atomics.hpp  MAA_compiler_api.cpp  MAA_functional.hpp  MAA_gem5.hpp  MAA_gem5_magic.hpp  MAA_utility.hpp  README.md  gen_chkpt.sh  make.sh  make_double.sh  make_functional.sh  prefetch_depricated.cpp  run_chkpt.sh  test.cpp  test_compiler.cpp  test_functional.cpp  test_strided.cpp  test_tested_parallel.cpp  test_vectorized.cpp
benchmarks/NAS/: .gitignore  build.sh
benchmarks/NAS/cg/: .gitignore  MFO  Makefile  README.md  cg.cpp  cg2.cpp  make_all.sh
benchmarks/NAS/is/: .gitignore  MFO  Makefile  README.md  build.sh  is.cpp  make_all.sh
benchmarks/UME/: .gitignore  Makefile  build.sh  gradzatp.cpp  gradzatp_invert.cpp  gradzatz.cpp  gradzatz_invert.cpp  gradzatz_invert_base_vs_CSR.cpp  run.sh
benchmarks/gapbs/: .gitignore  Makefile  README.md  build.sh  run_bc.sh  run_bfs.sh  run_g_gen.sh  run_pr.sh  run_sssp.sh  run_wg_gen.sh
benchmarks/gapbs/src/: bc.cc  bc_maa_full.cc  bc_new.cc  benchmark.h  bfs.cc  bfs_bu.cc  bitmap.h  builder.h  command_line.h  converter.cc  generator.h  graph.h  platform_atomics.h  pr.cc  pvector.h  sliding_queue.h  sssp.cc  sssp_maa.cc
benchmarks/hashjoin/: .gitignore  README.md  build.sh  compile_all.sh  compile_x86.sh  compile_x86_tilesize.sh
benchmarks/hashjoin/src/: generator.c  main.c  npj2epb.c  npj8epb.c  parallel_radix_join.cpp  task_queue.h  types.h
benchmarks/spatter/: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  processor.py  run.sh  run_rb_analysis_allapps.sh
benchmarks/spatter/cmake/pkgs/: OpenMPSupport.cmake
benchmarks/spatter/src/: CMakeLists.txt  main.cc
benchmarks/spatter/src/Spatter/: CMakeLists.txt  Configuration.cc  Configuration.hh  row_buffer_analysis.hh
benchmarks/spatter/standard-suite/binary-traces/: gz_read.cc
configs/: gen_checkpoint_gem5.sh  parse_DAE.sh  parse_RC.sh  parse_SC.sh  parse_dmp_all.sh  parse_gem5.py  restore_checkpoint_gem5.sh  run_gem5.py  run_gem5.sh  run_gem5_2.py  run_gem5_all.py  run_gem5_all_DAE.py  run_gem5_all_nopf.py  run_gem5_all_singlecore.py  run_gem5_all_valgrind.py  run_gem5_scalability.py  template.xml
configs/common/: CacheConfig.py  Caches.py  MAA.py  MAAConfig.py  MemConfig.py  ObjectList.py  Options.py  Simulation.py
configs/deprecated/example/: se.py
configs/example/: hpc_se_genckpt.py  hpc_se_genckpt_test_restore.py  hpc_se_restoreckpt.py  hpc_se_restoreckpt_simple.py
configs/example/gem5_library/: x86-ubuntu-run-with-kvm-hpc.py
configs/example/gem5_library/checkpoints/: simpoints-se-checkpoint.py  simpoints-se-restore.py
configs/ruby/: Ruby.py
ext/mcpat/: .gitignore  run.sh
ext/mcpat/src/: array.cc
ext/mcpat/src/cacti/: Ucache.cc  cache.cfg  cacti_interface.cc
ext/mcpat/src/cacti/decoder/: decoder.h
ext/mcpat/src/core/: branch_predictor.cc  core.cc  exec_unit.cc  exec_unit.h  instfetch.cc  instfetch.h  loadstore.cc  mmu.cc  regfile.cc  renaming_unit.cc  scheduler.cc  scheduler.h
ext/ramulator2/ramulator2/: .gitignore  CMakeLists.txt  example_gem5_config.yaml  example_ldst_config.yaml  example_o3_config.yaml  processor.py  processor_CPU.py  processor_MAA.py  runner.py  runner_CPU.py
ext/ramulator2/ramulator2/src/: main.cpp
ext/ramulator2/ramulator2/src/addr_mapper/: addr_mapper.h
ext/ramulator2/ramulator2/src/addr_mapper/impl/: linear_mappers.cpp  rit.cpp
ext/ramulator2/ramulator2/src/base/: base.h  clocked.h  config.h  param.h  request.cpp  request.h  stats.h
ext/ramulator2/ramulator2/src/dram/: dram.h  spec.h
ext/ramulator2/ramulator2/src/dram_controller/: controller.h
ext/ramulator2/ramulator2/src/dram_controller/impl/: bh_dram_controller.cpp  dummy_controller.cpp  generic_dram_controller.cpp
ext/ramulator2/ramulator2/src/frontend/: frontend.h
ext/ramulator2/ramulator2/src/memory_system/: memory_system.h
ext/ramulator2/ramulator2/src/translation/: translation.h
include/gem5/: m5ops.h
results/: results.csv  results_DMP.csv  results_SC.csv  results_TS.csv  results_main.csv
scripts/: MCPAT_converter.py  benchmark.py  make.sh  make_fast.sh  parse.py  sim.py
src/arch/arm/: stage2_lookup.hh  table_walker.cc
src/arch/generic/: BaseMMU.py  mmu.cc  mmu.hh
src/arch/x86/: mmu.hh  tlb.cc  tlb.hh
src/base/: types.hh
src/base/stats/: group.hh
src/cpu/: BaseCPU.py  base.cc  base.hh  timebuf.hh
src/cpu/checker/: cpu_impl.hh
src/cpu/minor/: exec_context.hh  lsq.cc
src/cpu/o3/: FuncUnitConfig.py  cpu.hh  dyn_inst.cc  dyn_inst.hh  iew.cc  iew.hh  limits.hh  lsq.cc  lsq.hh  lsq_unit.cc  lsq_unit.hh
src/mem/: Ramulator2.py  SConscript  XBar.py  coherent_xbar.cc  coherent_xbar.hh  packet.cc  packet.hh  packet_queue.cc  port.cc  port.hh  port_proxy.cc  qport.hh  ramulator2.cc  ramulator2.hh  request.hh  snoop_filter.cc  snoop_filter.hh  sys_bridge.cc  xbar.cc  xbar.hh
src/mem/MAA/: ALU.cc  ALU.hh  CacheSidePort.cc  CpuSidePort.cc  IF.cc  IF.hh  IndirectAccess.cc  IndirectAccess.hh  Invalidator.cc  Invalidator.hh  MAA.cc  MAA.hh  MAA.py  MemSidePort.cc  Port.cc  RangeFuser.cc  RangeFuser.hh  SConscript  SPD.cc  SPD.hh  StreamAccess.cc  StreamAccess.hh  Tables.cc  Tables.hh
src/mem/cache/: Cache.py  base.cc  base.hh  cache.cc  cache.hh  cache_blk.cc  cache_blk.hh  cache_probe_arg.hh  mshr.cc  mshr_queue.cc  mshr_queue.hh  noncoherent_cache.cc
src/mem/cache/prefetch/: Prefetcher.py  base.cc  base.hh  diff_matching.cc  diff_matching.hh  multi.cc  multi.hh  queued.cc  queued.hh  stride.cc  stride.hh
src/mem/cache/replacement_policies/: replaceable_entry.hh
src/mem/cache/tags/: base.cc  base_set_assoc.hh  tagged_entry.hh
src/mem/ruby/slicc_interface/: AbstractController.cc
src/sim/: mem_pool.cc  pseudo_inst.cc  pseudo_inst.hh  system.hh
util/: extract_stats.py  gem5_runner.py  mount.sh
util/m5/src/: command.hh  lua_gem5Op.cc
util/m5/src/command/: SConscript  addmemregion.cc  clearmemregion.cc  sum.cc
(+14 files in other folders)
